fix: lobby item loading and skull meta preservation